--- a/Front/crs/index.html
+++ b/Front/crs/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PSSN</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="index.css" />
+  <script src="index.js" type="text/javascript"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,height=device-height" />
+  <title>Test</title>
 </head>
+
 <body>
-    
+  <main>
+    <div class="request">111111</div>
+    <div class="response">22222</div>
+    <div class="graph">333333</div>
+  </main>
 </body>
+
 </html>
