--- a/Front/crs/index.html
+++ b/Front/crs/index.html
@@ -11,7 +11,11 @@
 
 <body>
   <main>
-    <div class="request">111111</div>
+    <div class="request">
+      <button class="btn" onclick="get_and_draw_vectors()">
+        get vectors
+      </button>
+    </div>
     <div class="response">22222</div>
     <div class="graph">333333</div>
   </main>
