--- a/Front/crs/index.html
+++ b/Front/crs/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="index.css" />
-  <script src="index.js" type="text/javascript"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0,height=device-height" />
   <title>Test</title>
 </head>
@@ -16,9 +15,11 @@
         get vectors
       </button>
     </div>
-    <div class="response">22222</div>
-    <div class="graph">333333</div>
+    <div class="response" id="rsp">
+    </div>
+    <div class="graph" id="grp"></div>
   </main>
 </body>
-
+<script src="index.js" type="text/javascript"></script>
+<script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 </html>
